word wrap issues

--- a/assets/main-dark.scss
+++ b/assets/main-dark.scss
@@ -6,6 +6,9 @@
 
 p {
   margin: 0 0 10px;
+  word-wrap: initial;
+  word-break: initial;
+  white-space: initial;
 }
 
 h1 a {
